NEWS file for Transmission <http://www.transmissionbt.com/>

1.30 (2008/mm/dd)
http://trac.transmissionbt.com/query?group=component&milestone=1.30&order=severity
- Mac
   + Quick Look integration in the main window and inspector's file tab
   + Transfers can be dragged to different groups
   + Status strings are toggled from the action button (they are no longer clickable)

1.21 (2008/05/21)
http://trac.transmissionbt.com/query?group=component&milestone=1.21&order=severity
- All Platforms
   + Fix rare crash-on-startup bug
   + Handle corrupt announce URLs in torrent files more gracefully
   + Fix minor memory leak when closing torrents
- Mac
   + Fix visual glitch with the pieces bar
   + Italian localization included
- GTK+
   + Updated Catalan, Danish, German, Spanish, Finnish, Hebrew, Italian, Dutch,
     Polish, Romanian, Thai, Turkish, and Traditional Chinese translations

1.20 (2008/05/09)
http://trac.transmissionbt.com/query?group=component&milestone=1.20&order=severity
- All Platforms
   + Support https tracker connections
   + IP blocking using the Bluetack Level1 blocklist
   + Better support of multitracker torrents
   + Faster UPnP port mapping on startup
   + Ability to reset global statistics
   + Various bugfixes
- Mac
   + Display of decimal numbers matches system international settings
   + Updated Dock badge images
- GTK+
   + Inhibit hibernation when downloading
   + Use XDG basedir spec for configuration files
   + Various bug fixes and usability improvements
   + Vastly improved translations thanks to the Ubuntu translation team

1.11 (2008/04/04)
- Mac
   + Fix scrape address visual glitch with the tracker inspector tab
   + Only make the progress status string clickable on multi-file torrents
   + Traditional Chinese localization, updated Russian localization
- GTK+
   + Fix a couple of minor display issues

1.10 (2008/03/28)
- All Platforms
   + Stop torrents when downloading and the disk becomes full